# stream_to_led

./: .gitignore
embedded/: CMakeLists.txt  lwipopts.h
embedded/src/: led.c  led.pio  main.c  networking.c
local/: frame_sender.py  led_sim.py  pieces.py  rangetools.py  test_image.py  tetris.py  translator.py
